--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@
  * Kroc Camen, and the H5BP dev community and team.
  */
 
+/*http://css-tricks.com/seamless-responsive-photo-grid/*/
+
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
