--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,16 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.ui-widget {
+    background: white;
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.18);
+    border-radius: 5px;
+}
+
+.ui-widget-content {
+    
+}
+
 .row,.col {
     overflow: hidden;
     position: absolute;
