--- a/css/main.css
+++ b/css/main.css
@@ -207,9 +207,8 @@ textarea {
 
 .floating-panel > .floating-panel-content {
     border: 1px solid #ccc;
-    box-shadow: 8px 8px 5px #888888;
-    border-radius: 5px;
-    border-top-right-radius: 0px;
+/*    box-shadow: 8px 8px 5px #888888;*/
+/*    border-radius: 5px;*/
     position: absolute;
     bottom: 25px;
     top: 25px;
@@ -344,8 +343,6 @@ textarea {
     height: 200px;
     width: 250px;
 /*    border: 1px solid #ddd;*/
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.18);
-    border-radius: 5px;
     overflow: hidden;
     margin: 5px;
     margin-bottom: 2px;
@@ -550,6 +547,10 @@ textarea {
 
 .ui-widget {
     background: white;
+    border-radius: 5px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.18);
+    border-radius: 5px;
+    
 }
 
 div.right-toolbar-button {
