--- a/css/main.css
+++ b/css/main.css
@@ -518,7 +518,7 @@ textarea {
     font-size: 0.9em !important;
 }
 
-.post-comment .ui-state-default {
+/*.post-comment .ui-state-default {
     padding: 5px;
     position: relative;
 }
@@ -539,7 +539,7 @@ textarea {
 
 .post-comment a:hover, #post-message-user a:hover {
     text-decoration: underline;
-}
+}*/
 
 /*.post-comment .ui-widget-content {
     padding: 3px;
