--- a/css/main.css
+++ b/css/main.css
@@ -335,14 +335,17 @@ textarea {
     min-width: 112px;
     height: 30px;
     border-radius: 2px;
-    border: 1px #ccc;
-    background-color: firebrick;
+    border: 1px solid #ccc;
+    background-color: #ddd;
+    color: #444;
     padding: 3px;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .toolbar-button:hover, .post-button:hover, .nav-button:hover {
     background-color: #b3d4fc;
-    border: 1px #f8f8f8;
+    border: 1px solid #f8f8f8;
 }
 
 .nav-button {
