--- a/css/main.css
+++ b/css/main.css
@@ -330,7 +330,7 @@ textarea {
     margin-right: 5px;
 }
 
-.toolbar-button, .post-button, .nav-button {
+.button {
     cursor: pointer;
     min-width: 112px;
     height: 30px;
@@ -340,25 +340,29 @@ textarea {
     color: #444;
     padding: 3px;
     text-align: center;
+    font-weight: bold;
+}
+
+.button > span {
+    display: inline-block;
     vertical-align: middle;
 }
 
-.toolbar-button:hover, .post-button:hover, .nav-button:hover {
+.button:hover {
     background-color: #b3d4fc;
     border: 1px solid #f8f8f8;
 }
 
 .nav-button {
-    width: 100%;
-    margin-top: 4px;
+    
 }
 
-.toolbar-button {
+.button.toolbar-button {
     display: inline-block;
     margin-left: 5px;
 }
 
-.post-button {
+.button.post-button {
     display: inline-block;
 }
 
