--- a/css/main.css
+++ b/css/main.css
@@ -360,8 +360,8 @@ textarea {
     border: 1px solid transparent;
     background: white;
     border-radius: 0;
-    top: 0;
-    bottom: 0;
+    height: 40px;
+    line-height: 40px;
 }
 
 .button.toolbar-button:hover {
