--- a/css/main.css
+++ b/css/main.css
@@ -651,6 +651,7 @@ div.right-toolbar-button {
     display: none;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+    margin: 0;
 }
 
 #post-feed {
