--- a/css/main.css
+++ b/css/main.css
@@ -364,6 +364,7 @@ textarea {
     height: 40px;
     line-height: 40px;
     border: 1px solid transparent;
+    text-align: left;
 }
 
 .button.toolbar-button {
