--- a/css/main.css
+++ b/css/main.css
@@ -417,7 +417,7 @@ textarea {
 
 #button-groups {
     text-align: left;
-    padding-left: 8px;
+    margin-left: 200px;
 }
 
 /*http://jsfiddle.net/E78q3/*/
