--- a/css/main.css
+++ b/css/main.css
@@ -418,6 +418,7 @@ textarea {
 #button-groups {
     text-align: left;
     margin-left: 200px;
+    color: firebrick;
 }
 
 /*http://jsfiddle.net/E78q3/*/
