--- a/css/main.css
+++ b/css/main.css
@@ -418,7 +418,7 @@ textarea {
 #button-groups {
     text-align: left;
     margin-left: 200px;
-    color: firebrick;
+    color: #e31025;
 }
 
 /*http://jsfiddle.net/E78q3/*/
