--- a/css/main.css
+++ b/css/main.css
@@ -435,11 +435,16 @@ textarea {
     height: 200px;
     width: 250px;
     overflow: hidden;
-    margin: 5px;
+/*    margin: 5px;*/
+    border: 5px solid transparent;
     margin-bottom: 2px;
     cursor: pointer;
     color: #444;
     font-size: 1.0em;
+}
+
+.post-block:hover {
+    border-color: #ff0;
 }
 
 .post-block.post-block-text > div {
@@ -452,22 +457,6 @@ textarea {
     padding: 12px;
     border-radius: 5px;
 }
-
-/*.post-block-message-cornsilk {
-    background-color: cornsilk;
-}
-
-.post-block-message-antwh {
-    background-color: antiquewhite;
-}
-
-.post-block-message-azure {
-    background-color: azure;
-}
-
-.post-block-message-cornb {
-    background-color: cornflowerblue;
-}*/
 
 .post-block.post-block-image {
     padding: 1px;
