--- a/css/main.css
+++ b/css/main.css
@@ -444,7 +444,7 @@ textarea {
 }
 
 .post-block:hover {
-    border-color: #ff0;
+    border-color: #f7c80a;
 }
 
 .post-block.post-block-text > div {
