--- a/css/main.css
+++ b/css/main.css
@@ -260,6 +260,7 @@ textarea {
     padding-top: 8px;
     padding-bottom: 8px;
     display: inline-block;
+    margin: 5px;
 }
 
 .selection-item .ui-icon {
