--- a/css/main.css
+++ b/css/main.css
@@ -446,6 +446,8 @@ textarea {
 .post-block.load-more {
     background-color: #0073ea;
     text-align: center;
+    font-weight: bold;
+    color: white;
 }
 
 .load-more > .load-more-text {
