--- a/css/main.css
+++ b/css/main.css
@@ -431,14 +431,15 @@ textarea {
 
 .post-block {
     display: inline-block;
-    background: white;
+    background: #43726c;
     height: 200px;
     width: 250px;
     overflow: hidden;
     margin: 5px;
     margin-bottom: 2px;
     cursor: pointer;
-    color: #444;
+/*    color: #444;*/
+    color: white;
     font-size: 1.0em;
 }
 
