--- a/css/main.css
+++ b/css/main.css
@@ -668,9 +668,9 @@ textarea {
 
 .ui-widget,.menu {
     background: white;
-    border-radius: 5px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.28);
-    border-radius: 5px;
+/*    border-radius: 5px;*/
+/*    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.28);
+    border-radius: 5px;*/
 }
 
 div.right-toolbar-button {
