--- a/css/main.css
+++ b/css/main.css
@@ -421,10 +421,10 @@ textarea {
     color: white;
     padding-left: 8px;
     padding-right: 8px;
-    border-radius: 5px;
+/*    border-radius: 5px;
     height: 30px;
     line-height: 30px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.28);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.28);*/
 }
 
 /*http://jsfiddle.net/E78q3/*/
