--- a/css/main.css
+++ b/css/main.css
@@ -356,7 +356,7 @@ textarea {
     line-height: normal;
 }
 
-.button:hover, .menu-item:hover, .post-block:hover {
+.button:hover, .menu-item:hover{
     background-color: #b3d4fc;
 }
 
@@ -450,6 +450,7 @@ textarea {
 
 .post-block:hover {
     color: #444;
+    background-color: #b3d4fc;
 }
 
 .load-more > .load-more-text {
