--- a/css/main.css
+++ b/css/main.css
@@ -431,7 +431,7 @@ textarea {
 
 .post-block.ui-widget {
     display: inline-block;
-    background: #43726c;
+    background: #193f41;
     height: 200px;
     width: 250px;
     overflow: hidden;
