--- a/css/main.css
+++ b/css/main.css
@@ -162,9 +162,9 @@ textarea {
 .selected-nav {
     color: #ffffff !important;
     text-decoration: none !important;
-    border: 1px solid #0073ea !important;
+/*    border: 1px solid #0073ea !important;*/
     /*background: #0073ea url(flick-red/images/ui-bg_highlight-soft_25_0073ea_1x100.png) 50% 50% repeat-x !important;  Custom Flick */
-    background: #0073ea;
+    background: #193f41;
     font-weight: bold !important;
 }
 
