--- a/css/main.css
+++ b/css/main.css
@@ -359,6 +359,7 @@ textarea {
 .button:hover, .menu-item:hover{
 /*    background-color: #b3d4fc;*/
     background-color: #307a7e;
+    color: white;
 }
 
 .nav-button {
@@ -454,7 +455,6 @@ textarea {
 }
 
 .post-block:hover {
-    color: #444;
     background-color: #307a7e;
 }
 
