--- a/css/main.css
+++ b/css/main.css
@@ -470,6 +470,12 @@ textarea {
     background-color: #307a7e;
 }*/
 
+#post-block-mask {
+    background: #999;
+    opacity: 0.2;
+    position: absolute;
+}
+
 .load-more > .load-more-text {
     line-height: 200px;
     vertical-align: middle;
