--- a/css/main.css
+++ b/css/main.css
@@ -471,8 +471,8 @@ textarea {
 }*/
 
 #post-block-mask {
-    background: #999;
-    opacity: 0.2;
+    background: #307a7e;
+    opacity: 0.4;
     position: absolute;
 }
 
