--- a/css/main.css
+++ b/css/main.css
@@ -449,7 +449,8 @@ textarea {
 
 .post-block.ui-widget {
     display: inline-block;
-    background: #193f41;
+/*    background: #193f41;*/
+    background-color: #13486b;
     height: 200px;
     width: 250px;
     overflow: hidden;
