--- a/css/main.css
+++ b/css/main.css
@@ -734,7 +734,7 @@ div.right-toolbar-button {
     width: 180px;
     position: absolute;
 /*    padding: 5px;*/
-    top: 44px;
+/*    top: 44px;*/
     border-radius: 0;
 }
 
