--- a/css/main.css
+++ b/css/main.css
@@ -734,6 +734,7 @@ div.right-toolbar-button {
     width: 180px;
     position: absolute;
 /*    padding: 5px;*/
+    padding-top: 8px;
     top: 44px;
     border-radius: 0;
 }
