--- a/css/main.css
+++ b/css/main.css
@@ -467,6 +467,7 @@ textarea {
 .post-block.load-more {
     padding: 0px;
     position: relative;
+    background-color: #e31025;
 }
 
 /*.post-block:hover {
