--- a/css/main.css
+++ b/css/main.css
@@ -742,6 +742,22 @@ div.login-div {
     background: white;
 }
 
+#post-comment {
+    position: absolute;
+    display: none;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    margin: 0;
+}
+
+#post-comment > textarea {
+    border: transparent;
+    width: 100%;
+    height: 100%;
+    margin-left: -2px;
+    margin-top: -2px;
+}
+
 #post-comment-text {
     border-width: 2px;
     height: 4.5em;
