--- a/css/main.css
+++ b/css/main.css
@@ -742,7 +742,7 @@ div.login-div {
     background: white;
 }
 
-#post-comment {
+#popup-comment {
     position: absolute;
     display: none;
     border-top-left-radius: 0;
@@ -750,7 +750,7 @@ div.login-div {
     margin: 0;
 }
 
-#post-comment > textarea {
+#popup-comment-text {
     border: transparent;
     width: 100%;
     height: 100%;
