--- a/css/main.css
+++ b/css/main.css
@@ -684,6 +684,7 @@ div.right-toolbar-button {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     margin: 0;
+    z-index: 1002;
 }
 
 .menu-item {
