--- a/css/main.css
+++ b/css/main.css
@@ -752,6 +752,7 @@ div.login-div {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     margin: 0;
+    padding: 10px;
 }
 
 #popup-comment-text {
