--- a/css/main.css
+++ b/css/main.css
@@ -756,11 +756,11 @@ div.login-div {
 }
 
 #popup-comment-text {
-    border: transparent;
-    width: 100%;
-    height: 100%;
-    margin-left: -2px;
-    margin-top: -2px;
+/*    border: transparent;*/
+    width: 200px;
+    height: 100px;
+/*    margin-left: -2px;
+    margin-top: -2px;*/
 }
 
 #post-comment-text {
