--- a/css/main.css
+++ b/css/main.css
@@ -733,7 +733,8 @@ div.login-div {
 }
 
 #popup-comment-text {
-    border: transparent;
+    border: 1px solid #dddddd;
+    border-radius: 2px;
     width: 300px;
     height: 100px;
 /*    margin-left: -2px;
