--- a/css/main.css
+++ b/css/main.css
@@ -230,6 +230,7 @@ textarea {
     top: 0;
     bottom: 0;
     padding: 10px;
+    border-right: 2px solid #f6f6f6;
 }
 
 .floating-panel-content > #details-right-column {
