--- a/css/main.css
+++ b/css/main.css
@@ -560,7 +560,7 @@ textarea {
 
 .floating-panel-section {
     margin-bottom: 10px;
-    border: 1px solid #eee;
+    border: 2px solid #f6f6f6;
 }
 
 .facebook-user-header.floating-panel-section {
