--- a/css/main.css
+++ b/css/main.css
@@ -520,7 +520,8 @@ textarea {
 
 .post-block.post-block-text > div > p {
     overflow: hidden;
-    height: 170px;
+/*    height: 170px;*/
+    height: 215px;
     padding: 12px;
     border-radius: 5px;
     line-height: 1.3;
