--- a/css/main.css
+++ b/css/main.css
@@ -264,16 +264,16 @@ textarea {
 
 .selection-item {
     display: inline-block;
-    background-color: #dddddd;
+    background-color: #eee;
     margin: 5px;
-    height: 150px;
-    width: 150px;
 }
 
 .selection-item-content {
     display: table-cell !important;
     vertical-align: middle;
     text-align: center;
+    height: 180px;
+    width: 180px;
 }
 
 .selection-item-content > div {
