--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,7 @@ textarea {
     text-align: center;
     height: 134px;
     width: 134px;
+    position: relative;
 }
 
 .selection-item-content > div {
@@ -281,7 +282,12 @@ textarea {
 }
 
 .selection-item-content > .button-icon {
-    display: inline-block;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
 }
 
 .floating-panel.narrow-floating-panel {
