--- a/css/main.css
+++ b/css/main.css
@@ -277,10 +277,11 @@ textarea {
 }
 
 .selection-item-content > div {
-    margin-left: 10px !important;
+/*    margin-left: 10px !important;*/
+    text-align: center;
 }
 
-.selection-item-content > .button-icon {
+.selection-item-content .button-icon {
     display: block;
 }
 
